--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <div class="section1 p-4" style="border:0px solid darkred;">
       <ul>
         <li>home</li>
-        <li>crete</li>
+        <li>create</li>
         <li>contact</li>
         <li>service</li>
       </ul>
@@ -195,7 +195,7 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <div class="section2 p-4" style="border:0px solid darkred;">
       <ul>
         <li>home</li>
-        <li>crete</li>
+        <li>create</li>
         <li>contact</li>
         <li>service</li>
       </ul>
@@ -203,7 +203,7 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <div class="section3 p-4" style="border:0px solid darkred;">
       <ul>
         <li>home</li>
-        <li>crete</li>
+        <li>create</li>
         <li>contact</li>
         <li>service</li>
       </ul>
