--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
   <div class="box">
     <div class="text "><h1 style="font-size:4rem;">
       Eat Fresh <br>Eat Healthy
-    </h1><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br>
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,<br>
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.<br> Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum <br>dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident,<br> sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+    </h1><br><p>Foodies is restrarent in delhi popular all day dining signature outlet. With fashionable interiors for our clinetle, Foodies is the perfect eatery option for breakfast, lunch or dinner with business associates, families or friends. Take your pick from local and global cuisines for elaborately themed brunches to having idyllic food cuisins and our signature smoothies.
+
+The Foodies menu offers natural and healthy, yet sumptuous dining options, with delicious variations of broadly accepted tastes. The beverage menu is also quite extensive, with exotic teas and coffee options available along with drinks from the bar. The outlet boasts of some exotic eggy delights and specially crafted vegan menu proving that vegan dishes can be just as delicious as their non-vegan counterparts. We also serve our all-time tested vegetarian and non-vegetarian delicacies made by our master chefs. Indulge in delicious pancakes, fluffy French toast, crepe bretonne or hot crispy waffles.
+
+Sit back and enjoy Live music performances by local artists in the backdrop with our attentive, service. We also hold kitty parties or private parties upto 10-12 max.
+	    </p></div>
     <div class="img" data-aos="zoom-out"></div>
   </div>
 </div>
@@ -187,7 +187,7 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <div class="section1 p-4" style="border:0px solid darkred;">
       <ul>
         <li>home</li>
-        <li>crete</li>
+        <li>create</li>
         <li>contact</li>
         <li>service</li>
       </ul>
@@ -195,7 +195,7 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <div class="section2 p-4" style="border:0px solid darkred;">
       <ul>
         <li>home</li>
-        <li>crete</li>
+        <li>create</li>
         <li>contact</li>
         <li>service</li>
       </ul>
@@ -203,7 +203,7 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <div class="section3 p-4" style="border:0px solid darkred;">
       <ul>
         <li>home</li>
-        <li>crete</li>
+        <li>create</li>
         <li>contact</li>
         <li>service</li>
       </ul>
