--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
   <div class="link" data-aos="fade-left">
     <h2>Welcome to our <b>Foodies</b></h2><br>
      <p>
-       Aptent taciti sociosqu ad litora conubia nostra, per inceptos himenaeos. Aenean volutpat elementum ante, id eleifend eros luctus sit.<br>
+       Foodies is a restrarant popular all day dining signature outlet. With fashionable interiors for our clinetle, Foodies  is the perfect eatery option for breakfast, lunch or dinner with business associates, families or friends. Take your pick from local and global cuisines for elaborately themed brunches to having idyllic cups of coffee and our signature smoothies.
+Foodies menu offers natural and healthy, yet sumptuous dining options, with delicious variations of broadly accepted tastes. The beverage menu is also quite extensive, with exotic teas and coffee options available along with drinks from the bar. The outlet boasts of some exotic eggy delights and specially crafted vegan menu proving that vegan dishes can be just as delicious as their non-vegan counterparts. We also serve our all-time tested vegetarian and non-vegetarian delicacies made by our master chefs. Indulge in delicious pancakes, fluffy French toast, crepe bretonne or hot crispy waffles.
+Sit back and enjoy Live music performances by local artists in the backdrop with our attentive, service. We also hold kitty parties or private parties upto 10-12 pax
 
-Nunc vel pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean volutpat elementum ante, id eleifend eros luctus sit amet. vel tincidunt erat neque non ipsum. Ut sollicitudin pharetra enim.
-     </p><br>
+	  </p><br>
      <a href="#" style="border-radius: 30px; text-decoration: none;" class="bg-success p-3 pl-4 pr-4 text-white "><b >Read More</b></a>
   </div>
 </div>
@@ -129,8 +130,8 @@ cillum dolore eu fugiat nulla pariatur. </div>
        YOU CAN WATCH OUR COOKING VIDEO PROCESS!
      </div>
        <div class="p-4">
-       Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quae, consequatur voluptatem ad.
-     </div>
+      Chef Ranveer Brar begins a new chapter of  Raja Rasoi aur Andaaz Anokha in company of eminent poets like Mirza Ghalib and Rabindranath Tagore. He introduces us to the special relationship shared between Ghalib and mangoes and cooks his favorite dish Qaliamba, a combination of Kebab and Muramba. He also gives us an insight into the world of poetry which, much like cooking, is all about putting the right ingredients together. Paying tribute to Tagore, the Chef prepares his favourite Kavishambardhana, a dessert made from Cauliflower.
+	     </div>
        <div class="p-3">
         <a href="https://youtu.be/4S-7rol2VFQ" class="bg-success p-3 pl-4 pr-4 text-white">
         Play Video</a>
@@ -187,7 +188,7 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <div class="section1 p-4" style="border:0px solid darkred;">
       <ul>
         <li>home</li>
-        <li>crete</li>
+        <li>create</li>
         <li>contact</li>
         <li>service</li>
       </ul>
@@ -195,7 +196,7 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <div class="section2 p-4" style="border:0px solid darkred;">
       <ul>
         <li>home</li>
-        <li>crete</li>
+        <li>create</li>
         <li>contact</li>
         <li>service</li>
       </ul>
@@ -203,7 +204,7 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <div class="section3 p-4" style="border:0px solid darkred;">
       <ul>
         <li>home</li>
-        <li>crete</li>
+        <li>create</li>
         <li>contact</li>
         <li>service</li>
       </ul>
