--- a/index.html
+++ b/index.html
@@ -54,12 +54,8 @@
   <div class="box">
     <div class="text "><h1 style="font-size:4rem;">
       Eat Fresh <br>Eat Healthy
-    </h1><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br>
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,<br>
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.<br> Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum <br>dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident,<br> sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+    </h1><br><p>Eating a balanced diet of fresh, whole foods is a very important part of being healthy.<br>Unprocessed animal and plant foods can help provide vitamins and minerals you need for optimal health.<br>
+	    Real food is packed with antioxidants and nutrients that support heart health, including magnesium and healthy fats.</p></div>
     <div class="img" data-aos="zoom-out"></div>
   </div>
 </div>
@@ -68,10 +64,11 @@
   <div class="link" data-aos="fade-left">
     <h2>Welcome to our <b>Foodies</b></h2><br>
      <p>
-       Aptent taciti sociosqu ad litora conubia nostra, per inceptos himenaeos. Aenean volutpat elementum ante, id eleifend eros luctus sit.<br>
+       Foodies is a restrarant popular all day dining signature outlet. With fashionable interiors for our clinetle, Foodies  is the perfect eatery option for breakfast, lunch or dinner with business associates, families or friends. Take your pick from local and global cuisines for elaborately themed brunches to having idyllic cups of coffee and our signature smoothies.
+Foodies menu offers natural and healthy, yet sumptuous dining options, with delicious variations of broadly accepted tastes. The beverage menu is also quite extensive, with exotic teas and coffee options available along with drinks from the bar. The outlet boasts of some exotic eggy delights and specially crafted vegan menu proving that vegan dishes can be just as delicious as their non-vegan counterparts. We also serve our all-time tested vegetarian and non-vegetarian delicacies made by our master chefs. Indulge in delicious pancakes, fluffy French toast, crepe bretonne or hot crispy waffles.
+Sit back and enjoy Live music performances by local artists in the backdrop with our attentive, service. We also hold kitty parties or private parties upto 10-12 pax
 
-Nunc vel pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean volutpat elementum ante, id eleifend eros luctus sit amet. vel tincidunt erat neque non ipsum. Ut sollicitudin pharetra enim.
-     </p><br>
+	  </p><br>
      <a href="#" style="border-radius: 30px; text-decoration: none;" class="bg-success p-3 pl-4 pr-4 text-white "><b >Read More</b></a>
   </div>
 </div>
@@ -129,8 +126,8 @@ cillum dolore eu fugiat nulla pariatur. </div>
        YOU CAN WATCH OUR COOKING VIDEO PROCESS!
      </div>
        <div class="p-4">
-       Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quae, consequatur voluptatem ad.
-     </div>
+      Chef Ranveer Brar begins a new chapter of  Raja Rasoi aur Andaaz Anokha in company of eminent poets like Mirza Ghalib and Rabindranath Tagore. He introduces us to the special relationship shared between Ghalib and mangoes and cooks his favorite dish Qaliamba, a combination of Kebab and Muramba. He also gives us an insight into the world of poetry which, much like cooking, is all about putting the right ingredients together. Paying tribute to Tagore, the Chef prepares his favourite Kavishambardhana, a dessert made from Cauliflower.
+	     </div>
        <div class="p-3">
         <a href="https://youtu.be/4S-7rol2VFQ" class="bg-success p-3 pl-4 pr-4 text-white">
         Play Video</a>
@@ -153,7 +150,7 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <img src="blog1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text">Make it great, Eat fresh.</p>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 2 mins ago</small>
@@ -163,7 +160,7 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <h5 class="card-title p-4">Weekend Recipes</h5>
     <img src="blog2.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">Weekends are for splurging, and we've got all the best ways to do it! Whether it's smoked brisket that's slow-cooked for hours, or handmade pasta that the whole family helps with, the pay-off ensures it's time well-spent..</p>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
@@ -173,8 +170,8 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <h5 class="card-title p-4">Organic veggies</h5>
     <img src="blog3.jpg" class="card-img-top"   alt="...">
     <div class="card-body">
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
+      <p class="card-text">Organic Recipes. Feed your family healthy and organic meals with The Organic Center’s favorite recipes. Each dish comes with a side of science on the nutritional and environmental benefits of the organic ingredients used. We have included a variety of vegetarian and vegan recipes that your kids will love.
+	  </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 6 mins ago</small>
     </div>
@@ -187,27 +184,11 @@ cillum dolore eu fugiat nulla pariatur. </div>
     <div class="section1 p-4" style="border:0px solid darkred;">
       <ul>
         <li>home</li>
-        <li>crete</li>
+        <li>create</li>
         <li>contact</li>
         <li>service</li>
       </ul>
-    </div>
-    <div class="section2 p-4" style="border:0px solid darkred;">
-      <ul>
-        <li>home</li>
-        <li>crete</li>
-        <li>contact</li>
-        <li>service</li>
-      </ul>
-    </div>
-    <div class="section3 p-4" style="border:0px solid darkred;">
-      <ul>
-        <li>home</li>
-        <li>crete</li>
-        <li>contact</li>
-        <li>service</li>
-      </ul>
-    </div>
+	  </div><br>
     <div class="sub p-4" style="border:0px solid darkred;">
       <h3>Subscribe to our newsletter</h3>
       <br>
